docs(plasma-*-docs,sdds-*-docs): Add docs for `as` props

--- a/website/sdds-dfa-docs/docs/components/Typography.mdx
+++ b/website/sdds-dfa-docs/docs/components/Typography.mdx
@@ -23,6 +23,22 @@ title: Typography
 По умолчанию в типографике если текст превышает ширину элемента, то слова будут переноситься по пробелам.
 Чтобы запретить перенос по пробелам, необходимо установить свойство `noWrap` в значении `true`.
 
+## Смена тега
+Если при использовании компонентов необходимо сменить тег, то можно использовать свойство `as`:
+
+```tsx live
+import React from 'react';
+import { BodyM } from '@salutejs/sdds-dfa';
+
+export function App() {
+    return (
+        <BodyM as="h3">
+            BodyM
+        </BodyM>
+    );
+}
+```
+
 ## Состав
 
 ### Hero unit
