docs(*-docs): Add examples with `medium` font-weight in typography components

--- a/website/plasma-b2c-docs/docs/components/Typography.mdx
+++ b/website/plasma-b2c-docs/docs/components/Typography.mdx
@@ -32,7 +32,7 @@ import { StorybookLink } from '@site/src/components';
 
 ```tsx live
 import React from 'react';
-import { BodyM } from '@salutejs/plasma-b2c';
+import { BodyM } from '@salutejs/plasma-giga';
 
 export function App() {
     return (
@@ -56,12 +56,15 @@ export function App() {
         <div style={{ display: 'block' }}>
             <DsplL bold={false}>DsplL</DsplL>
             <DsplL>DsplL Bold</DsplL>
+            <DsplL medium>DsplL Medium</DsplL>
 
             <DsplM bold={false}>DsplM</DsplM>
             <DsplM>DsplM Bold</DsplM>
+            <DsplM medium>DsplM Medium</DsplM>
 
             <DsplS bold={false}>DsplS</DsplS>
             <DsplS>DsplS Bold</DsplS>
+            <DsplS medium>DsplS Medium</DsplS>
         </div>
     );
 }
@@ -78,18 +81,23 @@ export function App() {
         <div style={{ display: 'block' }}>
             <H1 bold={false}>H1</H1>
             <H1>H1 Bold</H1>
+            <H1 medium>H1 Medium</H1>
 
             <H2 bold={false}>H2</H2>
             <H2>H2 Bold</H2>
+            <H2 medium>H2 Medium</H2>
 
             <H3 bold={false}>H3</H3>
             <H3>H3 Bold</H3>
+            <H3 medium>H3 Medium</H3>
 
             <H4 bold={false}>H4</H4>
             <H4>H4 Bold</H4>
+            <H4 medium>H4 Medium</H4>
 
             <H5 bold={false}>H5</H5>
             <H5>H5 Bold</H5>
+            <H5 medium>H5 Medium</H5>
         </div>
     );
 }
@@ -106,19 +114,24 @@ export function App() {
     return (
         <div style={{ display: 'block' }}>
             <BodyL>BodyL</BodyL>
-            <BodyL bold>BodyL полужирный</BodyL>
+            <BodyL bold>BodyL Bold</BodyL>
+            <BodyL medium>BodyL Medium</BodyL>
 
             <BodyM>BodyM</BodyM>
-            <BodyM bold>BodyM полужирный</BodyM>
+            <BodyM bold>BodyM Bold</BodyM>
+            <BodyM medium>BodyM Medium</BodyM>
 
             <BodyS>BodyS</BodyS>
-            <BodyS bold>BodyS полужирный</BodyS>
+            <BodyS bold>BodyS Bold</BodyS>
+            <BodyS medium>BodyS Medium</BodyS>
 
             <BodyXS>BodyXS</BodyXS>
-            <BodyXS bold>BodyXS полужирный</BodyXS>
+            <BodyXS bold>BodyXS Bold</BodyXS>
+            <BodyXS medium>BodyXS Medium</BodyXS>
 
             <BodyXXS>BodyXXS</BodyXXS>
-            <BodyXXS bold>BodyXXS полужирный</BodyXXS>
+            <BodyXXS bold>BodyXXS Bold</BodyXXS>
+            <BodyXXS medium>BodyXXS Medium</BodyXXS>
         </div>
     );
 }
@@ -135,16 +148,20 @@ export function App() {
     return (
         <div style={{ display: 'block' }}>
             <TextL>TextL</TextL>
-            <TextL bold>TextL полужирный</TextL>
+            <TextL bold>TextL Bold</TextL>
+            <TextL medium>TextL Medium</TextL>
 
             <TextM>TextM</TextM>
-            <TextM bold>TextM полужирный</TextM>
+            <TextM bold>TextM Bold</TextM>
+            <TextM medium>TextM Medium</TextM>
 
             <TextS>TextS</TextS>
-            <TextS bold>TextS полужирный</TextS>
+            <TextS bold>TextS Bold</TextS>
+            <TextS medium>TextS Medium</TextS>
 
             <TextXS>TextXS</TextXS>
-            <TextXS bold>TextXS полужирный</TextXS>
+            <TextXS bold>TextXS Bold</TextXS>
+            <TextXS medium>TextXS Medium</TextXS>
         </div>
     );
 }
