--- a/website/plasma-web-docs/docs/components/Typography-legacy.mdx
+++ b/website/plasma-web-docs/docs/components/Typography-legacy.mdx
@@ -46,6 +46,9 @@ export function App() {
 }
 ```
 
+## Моноширинные числа
+Если необходимо сделать числа моноширинным, то нужно установить свойство `inNumeric` в значении `true`.
+
 ## Состав
 
 ### Заголовки
