--- a/website/plasma-web-docs/docs/components/Typography.mdx
+++ b/website/plasma-web-docs/docs/components/Typography.mdx
@@ -43,6 +43,9 @@ export function App() {
 }
 ```
 
+## Моноширинные числа
+Если необходимо сделать числа моноширинным, то нужно установить свойство `inNumeric` в значении `true`.
+
 ## Состав
 
 ### Hero unit
