--- a/packages/plasma-new-hope/src/components/Tree/Tree.template-doc.mdx
+++ b/packages/plasma-new-hope/src/components/Tree/Tree.template-doc.mdx
@@ -99,7 +99,7 @@ type TreeItem = {
             ];
 
             return (
-                <div style={{ display: 'block' }}>
+                <div style=\{{ display: 'block' }}>
                     <Tree items={treeData} defaultExpandAll />
                 </div>
             );
@@ -166,7 +166,7 @@ type TreeItem = {
             const [selected, setSelected] = React.useState<React.Key>([]);
 
             return (
-                <div style={{ display: 'block' }}>
+                <div style=\{{ display: 'block' }}>
                     <Tree
                         items={treeData}
                         checkable
@@ -176,6 +176,29 @@ type TreeItem = {
                         onTreeCheck={setChecked}
                         selectedKeys={selected}
                         onTreeSelect={setSelected}
+                    />
+                </div>
+            );
+        }
+        ```
+    </TabItem>
+    <TabItem value="virtual" label="Virtual">
+        Для включения виртуализации обязательными являются 2 свойства: `height` и `itemHeight`. \
+        Также есть опциональный флаг для явного отключения/включения виртуализации: `virtual`.
+
+        ```tsx live
+        import React from 'react';
+        import { Tree } from '@salutejs/{{ package }}';
+
+        export function App() {
+            return (
+                <div style=\{{ display: 'block' }}>
+                    <Tree
+                        items={Array(1000)
+                            .fill(1)
+                            .map((_, i) => ({ key: i.toString(), title: i.toString() }))}
+                        height={400}
+                        itemHeight={48}
                     />
                 </div>
             );
