--- a/website/sdds-cs-docs/docs/components/Toast.mdx
+++ b/website/sdds-cs-docs/docs/components/Toast.mdx
@@ -4,155 +4,86 @@ title: Toast
 ---
 
 import { PropsTable, Description } from '@site/src/components';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # Toast
-<Description name="Toast" />
-<PropsTable name="Toast" />
+:::info
+Обновленная версия компонента Toast с расширенным функционалом.
+:::
 
-## Система подсказок
-Существует готовая система текстовых подсказок, для использования которой необходимо обернуть приложение в `ToastProvider`:
+Компонент `ToastContainer`:
+<Description name="ToastContainer" />
+<PropsTable name="ToastContainer" />
 
-```jsx title="App.tsx"
-import React from 'react';
-import { ToastProvider } from '@salutejs/sdds-cs';
 
-export const App = () => (
-    <ToastProvider>
-        <div className="App">Hello, world!</div>
-    </ToastProvider>
-);
-```
+## Использование
+Для корректной работы необходимо импортировать:
+- компонент `ToastContainer` - DOM-контейнер для тостов, вставляется один раз в любом месте приложения;
+- метод `showToast(text: string, options: ShowToastType)`;
 
-После этого, с помощью хука `useToast` можно получить доступ к управлению подсказками.
+Настраивать тосты можно как через `ToastContainer`, так и через опции в методе `showToast`. При чем большинство этих свойств пересекается, но более высокий приоритет имеют опции из `showToast`.\
+Таким образом можно задать дефолтное поведение через `ToastContainer`, и уже индивидуально настраивать каждый тост через опции из `showToast`.
 
-```jsx title="MyComponent.tsx"
-import React from 'react'
-import { useToast, Button } from '@salutejs/sdds-cs'
-
-export const MyComponent = () => {
-    const { showToast, hideToast } = useToast()
-
-    const onHide = () => {}
-
-    return (
-        <Button onClick={() => showToast({ text, position, timeout, fade, contentLeft, role, onHide })} />
-    )
-}
-```
-
-`showToast` имеет необязательный аргумент `position`, отвечающий за позиционирование подсказки.
-
-```ts
-type Position = 'top' | 'bottom';
-```
-
-`showToast` имеет необязательный аргумент `timeout`, отвечающий за время отображения подсказки.
-Если аргумент не передается, по умолчанию подсказка отображается пока пользователь ее не закроет.
-
-Скрыть текущую подсказку в любой момент можно с помощью функции `hideToast`.
-
-## Аргументы функции `showToast`
-| Название | Тип             | Значение | Описание           |
-|----------|-----------------|----------|--------------------|
-| `args`   | `ShowToastArgs` |          | Конфигурация toast |
-
-```ts
-import type { ReactNode } from 'react';
-
-export interface ShowToastArgs {
-    /**
-     * Текстовая надпись
-     */
-    text?: string;
-    /**
-     * Слот для контента слева, например `Icon`
-     */
-    contentLeft?: ReactNode;
-    /**
-     * Место отображения подсказки
-     */
-    position?: ToastPosition;
-    /**
-     * WAI-ARIA роль
-     */
-    role?: ToastRole;
-    /**
-     * Отображать ли подложку блока подсказки
-     */
-    fade?: boolean;
-    /**
-     * Значение для дополнительно отступа блока подсказки, считается в rem.
-     */
-    offset?: number;
-    /**
-     * Блок подсказки c округлым border-radius
-     */
-    pilled?: boolean;
-    /**
-     * Отображать ли иконку закрытия
-     */
+Формат типа <b>ShowToastType</b> следующий:
+```tsx
+type ShowToastType = {
     hasClose?: boolean;
-    /**
-     * Размер блока подсказки
-     */
-    size?: string;
-    /**
-     * Вид блока подсказки
-     */
+    contentLeft?: ReactNode;
+    width?: CSSProperties['width'];
+    textColor?: CSSProperties['color'];
+    position?: ToastPosition;
+    duration?: number;
     view?: string;
-    /**
-     * Время отображения подсказки. Если не передать значение, подсказка будет отображаться пока ее не закроют.
-     */
-    timeout?: number;
-    /**
-     * Цвет текста (по умолчанию берётся цвет из view)
-     */
-    textColor?: string;
-    /**
-     * callback срабатывающий в момент события hideToast
-     */
-    onHide?: () => void;
-    /**
-     * callback срабатывающий в момент события showToast
-     */
-    onShow?: () => void;
-}
+    size?: string;
+    pilled?: boolean;
+};
 ```
 
-## Пример использования
+## Примеры
 
-```jsx live
-import React from 'react'
-import { useToast, ToastProvider, Button } from '@salutejs/sdds-cs'
+### Default
+```tsx live
+import React from 'react';
+import { ToastContainer, showToast, Button } from '@salutejs/sdds-cs';
 
 export function App() {
-
-    const ToastExample = () => {
-        const { showToast, hideToast } = useToast()
-
-        const onShow = () => {}
-        const onHide = () => {}
-        const toastData = {
-            text: 'Подсказка вызванная showToast',
-            textColor: 'cyan',
-            position: 'bottom',
-            role: 'status',
-            hasClose: true,
-            fade: false,
-            size: 's',
-            view: 'default',
-            timeout: 3000,
-            onShow,
-            onHide
-        }
-
-        return <Button onClick={() => showToast(toastData)} text="Вызвать подсказку" />
-    }
+    const handleShowToast = () => {
+        showToast("Текст всплывающего уведомления");
+    };
 
     return (
-        <ToastProvider>
-            <ToastExample />
-        </ToastProvider>
-    )
+        <div>
+            <ToastContainer />
+
+            <Button onClick={handleShowToast}>Показать тост</Button>
+        </div>
+    );
+}
+```
+
+### Override
+В данном примере показано, как гибко настроить каждый тост. Напоминаем, что опции в `showToast` переопределяют такие же в `ToastContainer`.
+```tsx live
+import React from 'react';
+import { ToastContainer, showToast, Button } from '@salutejs/sdds-cs';
+
+export function App() {
+    const handleShowToastDefault = () => {
+        showToast("Стандартный тост");
+    };
+
+    const handleShowToastCustom = () => {
+        showToast("Кастомный тост", { textColor: "blue", pilled: true, hasClose: false, duration: 3000 });
+    };
+
+    return (
+        <div>
+            <ToastContainer textColor="green" />
+
+            <Button onClick={handleShowToastDefault}>Показать стандартный тост</Button>
+            <Button onClick={handleShowToastCustom}>Показать кастомный тост</Button>
+        </div>
+    );
 }
 ```
