feat(sdds-insol): Add `TextSlim` component in typography

--- a/website/sdds-cs-docs/docs/components/Typography.mdx
+++ b/website/sdds-cs-docs/docs/components/Typography.mdx
@@ -141,7 +141,7 @@ export function App() {
 
 ```tsx live
 import React from 'react';
-import { TextL, TextM, TextS, TextXS } from '@salutejs/sdds-cs';
+import { TextL, TextM, TextS, TextXS, TextSlim } from '@salutejs/sdds-cs';
 
 export function App() {
     return (
@@ -161,6 +161,10 @@ export function App() {
             <TextXS>TextXS</TextXS>
             <TextXS bold>TextXS Bold</TextXS>
             <TextXS medium>TextXS Medium</TextXS>
+
+            <TextSlim>TextSlim</TextSlim>
+            <TextSlim bold>TextSlim Bold</TextSlim>
+            <TextSlim medium>TextSlim Medium</TextSlim>
         </div>
     );
 }
