--- a/website/plasma-b2c-docs/docs/components/Combobox.mdx
+++ b/website/plasma-b2c-docs/docs/components/Combobox.mdx
@@ -10,7 +10,7 @@ import TabItem from '@theme/TabItem';
 # Combobox
 
 <Description name="Combobox" />
-<PropsTable name="Combobox" />
+<PropsTable name="Combobox" exclude="negativeResultContent, enumerationType, onBlur, onFocus, usePortal, opened, frame, filterFunction, valueType" />
 
 ## Использование
 Обязательным параметром является только `items`. Внутри items может быть такой же вложенный массив items. Формат следующий:
