--- a/packages/plasma-new-hope/src/components/Combobox/Combobox.template-doc.mdx
+++ b/packages/plasma-new-hope/src/components/Combobox/Combobox.template-doc.mdx
@@ -10,7 +10,7 @@ import TabItem from '@theme/TabItem';
 # Combobox
 
 <Description name="Combobox" />
-<PropsTable name="Combobox" />
+<PropsTable name="Combobox" exclude="negativeResultContent, enumerationType, onBlur, onFocus, usePortal, opened, frame, filterFunction, valueType" />
 
 ## Использование
 Обязательным параметром является только `items`. Внутри items может быть такой же вложенный массив items. Формат следующий:
@@ -26,7 +26,7 @@ type Items = Array<{
          */
         label: string;
         /**
-        * Сторона открытия вложенного dropdown относительно текущего элемента
+        * Сторона открытия вложенного dropdown относительно текущего элемента;
         * @default right
         */
         placement?: Placement;
@@ -61,7 +61,7 @@ type Items = Array<{
         import { Combobox } from '@salutejs/{{ package }}';
 
         export function App() {
-            const [value, setValue] = useState('');
+           const [value, setValue] = useState<string>('');
 
             const items = [
                 {
@@ -107,7 +107,7 @@ type Items = Array<{
         import { Combobox } from '@salutejs/{{ package }}';
 
         export function App() {
-            const [value, setValue] = useState([]);
+           const [value, setValue] = useState<string[]>([]);
 
             const items = [
                 {
@@ -156,7 +156,7 @@ type Items = Array<{
         import { Combobox, Button } from '@salutejs/{{ package }}';
 
         export function App() {
-            const [multipleValue, setMultipleValue] = useState(['brazil', 'north_america']);
+            const [multipleValue, setMultipleValue] = useState<string[]>(['brazil', 'north_america']);
 
             const items = [
                 {
@@ -209,7 +209,7 @@ type Items = Array<{
         import { Combobox } from '@salutejs/{{ package }}';
 
         export function App() {
-            const [value, setValue] = useState('');
+           const [value, setValue] = useState<string>('');
 
             const items = [
                 {
@@ -235,7 +235,7 @@ type Items = Array<{
             const ref = useRef(null);
 
             return (
-                <div style=\{{ height: "300px" }} ref={ref}>
+                <div style=\{{ position: "relative", height: "300px" }} ref={ref}>
                     <div style=\{{ width: "300px" }}>
                         <Combobox
                             items={items}
@@ -351,9 +351,8 @@ type Items = Array<{
         :::
 
         Свойство `virtual` позволяет виртуализировать выпадающий список. Для настройки высоты списка можно использовать свойство `listMaxHeight`.
-
        ```tsx live
-        import React from 'react';
+        import React, { useState } from 'react';
         import { Combobox } from '@salutejs/{{ package }}';
 
         export function App() {
@@ -381,7 +380,7 @@ type Items = Array<{
 
        ```tsx live
         import React, { useState } from 'react';
-        import { Combobox } from '@salutejs/plasma-b2c';
+        import { Combobox } from '@salutejs/{{ package }}';
 
         export function App() {
             function getRandomData() {
@@ -452,7 +451,7 @@ type Items = Array<{
         ```tsx live
         import React from 'react';
         import { useForm, SubmitHandler } from 'react-hook-form';
-        import { Combobox, Button } from '@salutejs/plasma-b2c';
+        import { Combobox, Button } from '@salutejs/{{ package }}';
 
         export function App() {
             type Inputs = {
@@ -517,7 +516,7 @@ type Items = Array<{
         ```tsx live
         import React from 'react';
         import { useForm, Controller, SubmitHandler } from 'react-hook-form';
-        import { Combobox, Button } from '@salutejs/plasma-b2c';
+        import { Combobox, Button } from '@salutejs/{{ package }}';
 
         export function App() {
             type Inputs = {
@@ -596,7 +595,7 @@ type Items = Array<{
         ```tsx live
         import React from 'react';
         import { useForm, Controller, SubmitHandler } from 'react-hook-form';
-        import { Combobox, Button } from '@salutejs/plasma-b2c';
+        import { Combobox, Button } from '@salutejs/{{ package }}';
 
         export function App() {
             const onSubmit = (event: React.FormEvent<HTMLFormElement>) => {
