--- a/packages/plasma-new-hope/src/components/TextField/TextField.template-doc.mdx
+++ b/packages/plasma-new-hope/src/components/TextField/TextField.template-doc.mdx
@@ -37,7 +37,7 @@ export function App() {
 ```
 
 ### Размер поля
-Размер поля задаётся с помощью свойства `size`. Свойство принимает значения `"l"` и `"m"`:
+Размер поля задаётся с помощью свойства `size`. Свойство принимает значения `"l" | "m" | "s" | "xs"`:
 
 ```tsx live
 import React from 'react';
@@ -53,8 +53,8 @@ export function App() {
             />
             <TextField
                 placeholder="Размер"
-                size="m"
-                defaultValue="M48"
+                size="s"
+                defaultValue="S40"
             />
         </div>
     );
@@ -62,9 +62,9 @@ export function App() {
 ```
 
 ### Статус поля
-Статус поля задается с помощью свойства `status`.
-Возможные значения свойства: `success`, `warning` и `error`.
-На отображение TextField так же влияют свойства `clear` и `hasDivider`:
+Статус поля задается с помощью свойства `view`.
+
+Возможные значения свойства: `"positive" | "warning" | "negative"`
 
 ```tsx live
 import React from 'react';
@@ -75,46 +75,61 @@ export function App() {
         <div style=\{{ display: "flex", flexDirection: "column", gap: "1rem" }}>
             <div style=\{{ display: "flex", gap: "0.5rem" }}>
                 <TextField
-                    placeholder="Статус"
-                    status="success"
+                    placeholder="Статус positive"
+                    view="positive"
                     size="m"
-                    defaultValue="Успех"
+                    defaultValue="Positive"
                 />
                 <TextField
-                    placeholder="Статус"
-                    status="warning"
+                    placeholder="Статус warning"
+                    view="warning"
                     size="m"
-                    defaultValue="Предупреждение"
+                    defaultValue="Warning"
                 />
                 <TextField
-                    placeholder="Статус"
-                    status="error"
+                    placeholder="Статус Ошибка"
+                    view="negative"
                     size="m"
-                    defaultValue="Ошибка"
+                    defaultValue="Negative"
                 />
             </div>
+        </div>
+    );
+}
+```
+
+### Вариация Clear
+На отображение компонента так же влияют свойства `clear` и `hasDivider`:
+
+```tsx live
+import React from 'react';
+import { TextField } from '@salutejs/{{ package }}';
+
+export function App() {
+    return (
+        <div style=\{{ display: "flex", flexDirection: "column", gap: "1rem" }}>
             <div style=\{{ display: "flex", gap: "0.5rem" }}>
                 <TextField
-                    placeholder="Статус"
-                    status="success"
+                    placeholder="Статус positive"
+                    view="positive"
                     size="m"
-                    defaultValue="Успех"
+                    defaultValue="Positive"
                     clear
                     hasDivider
                 />
                 <TextField
-                    placeholder="Статус"
-                    status="warning"
+                    placeholder="Статус warning"
+                    view="warning"
                     size="m"
-                    defaultValue="Предупреждение"
+                    defaultValue="Warning"
                     clear
                     hasDivider
                 />
                 <TextField
-                    placeholder="Статус"
-                    status="error"
+                    placeholder="Статус negative"
+                    view="negative"
                     size="m"
-                    defaultValue="Ошибка"
+                    defaultValue="Negative"
                     clear
                     hasDivider
                 />
@@ -125,8 +140,11 @@ export function App() {
 ```
 
 ### Подсказка
-Для вывода подсказки снизу от поля используйте свойство `helperText`,
-для подсказки в виде Tooltip - `hintText`, для подсказки сверху справа - `titleCaption`:
+Для вывода подсказок:
+
+- `leftHelper` внизу слева под компонентом
+- `titleCaption` сверху справа над компонентом
+- `hintText` для подсказки в виде `Tooltip`
 
 ```tsx live
 import React from 'react';
@@ -138,7 +156,7 @@ export function App() {
             <TextField
                 placeholder="Введите значение"
                 defaultValue="Значение"
-                helperText="Подсказка снизу"
+                leftHelper="Подсказка снизу"
                 titleCaption="Подсказка сверху"
                 hintText="Подсказка в виде Tooltip"
                 hintView="default"
@@ -151,7 +169,9 @@ export function App() {
 
 ### Режим ввода
 С помощью свойства `enumerationType` можно вводить элементы как теги. Свойство `chipType` изменяет внешний вид чипа.
-С помощью `chipView` можно задать общий вид Chip. Валидация Chip происходит с помощью функции chipValidator.
+
+С помощью `chipView` можно задать общий вид `Chip`. Валидация `Chip` происходит с помощью функции `chipValidator`.
+
 По нажатию Enter, после ввода нужного текста, он преобразуется в Chip.
 
 ```tsx live
@@ -168,7 +188,7 @@ export function App() {
                 defaultValue="Значение"
                 size="l"
                 enumerationType="chip"
-                helperText="Подсказка снизу"
+                leftHelper="Подсказка снизу"
                 chips={["Значение 1", "Значение 2"]}
                 chipView="positive"
                 chipValidator={validateChip}
@@ -179,7 +199,7 @@ export function App() {
                 defaultValue="Значение"
                 size="l"
                 enumerationType="chip"
-                helperText="Подсказка снизу"
+                leftHelper="Подсказка снизу"
                 chips={["Значение 1"]}
                 chipType="text"
             />
@@ -188,9 +208,15 @@ export function App() {
 }
 ```
 
-
 ### Обязательность поля
-Обязательность поля задаётся с помощью свойств `required` и `requiredPlacement`. Где `requiredPlacement` отвечает за выравнивание и принимает значения `"left"` и `"right"`:
+
+:::tip
+Наличие индикатора регулируется свойством `hasRequiredIndicator`.
+:::
+
+Обязательность поля задаётся с помощью свойств `required` и `requiredPlacement`.
+
+Где `requiredPlacement` отвечает за выравнивание и принимает значения `"left"` и `"right"`:
 
 ```tsx live
 import React from 'react';
@@ -209,7 +235,66 @@ export function App() {
                 required
                 requiredPlacement="right"
             />
+            <TextField
+                placeholder="Введите значение"
+                label="Поле обязательное, но не имеет визуального индикатора"
+                required
+                requiredPlacement="right"
+                hasRequiredIndicator={false}
+            />
         </div>
     );
 }
 ```
+
+## Примеры
+
+### TextField + очистка поля
+
+```tsx live
+import React, { useState } from "react";
+import { TextField } from "@salutejs/{{ package }}";
+import { IconClose } from "@salutejs/plasma-icons";
+
+export function App() {
+  const [value, setValue] = useState("");
+
+  const ControlClear = (props: { onClick: () => void }) => {
+      return (
+        <div {...props}>
+          <IconClose size="xs" color="inherit" />
+        </div>
+      );
+  };
+
+  return (
+    <div>
+      <TextField
+        placeholder="Положение иконки"
+        value={value}
+        onChange={(e) => {
+          setValue(e.target.value);
+        }}
+        contentRight={
+          <ControlClear
+            onClick={() => {
+              setValue("");
+            }}
+          />
+        }
+      />
+    </div>
+  );
+}
+```
+
+## Клавиатурная навигация
+
+Данный компонент может полностью управляться с помощью клавиатуры, используя следующие клавиши:
+-  по нажатию `Tab` фокусируемся на input
+-  если enumeratinType=`chip` после ввода текста, по нажатию `Enter`, input очистится и появится Chip
+-  если введен текст в input по нажатию `ArrowLeft` или `ArrowRight` каретка передвигается по тексту
+-  при достижении левой границы текста или отсутствии текста в input, при нажатии `Backspace` удаляем последний Chip, если он есть
+-  при достижении левой границы текста или отсутствии текста в input, при нажатии `ArrowLeft` переключаемся на последний Chip, если он есть
+-  при фокусе на Chip работает переключение фокуса на другие Chip по нажатию `ArrowLeft`, `ArrowRight`; если же Chip крайний правый, при нажатии `ArrowRight` фокус переходит на input
+
