docs(core): fix templates issues

--- a/packages/plasma-new-hope/src/components/Checkbox/Checkbox.template-doc.mdx
+++ b/packages/plasma-new-hope/src/components/Checkbox/Checkbox.template-doc.mdx
@@ -7,12 +7,12 @@ import { PropsTable, Description } from '@site/src/components';
 
 # Checkbox
 <Description name="Checkbox" />
-<PropsTable name="Checkbox" exclude={['css', 'focused']} />
+<PropsTable name="Checkbox" exclude={['css', 'focused']} include={['defaultChecked']} />
 
 :::caution Устаревшие значения для свойства view
-Актуальным значением для свойства `view` - является `accent`. 
+Актуальным значением для свойства `view` - является `accent`.
 
-Все остальные значения `deprecated` и будут удалены в ближайшее время! 
+Все остальные значения `deprecated` и будут удалены в ближайшее время!
 :::
 
 ## Использование
