--- a/packages/plasma-new-hope/src/components/DatePicker/DatePicker.template-doc.mdx
+++ b/packages/plasma-new-hope/src/components/DatePicker/DatePicker.template-doc.mdx
@@ -194,6 +194,11 @@ export function App() {
 ```
 
 ### Обязательность поля
+
+:::tip
+Наличие индикатора регулируется свойством `hasRequiredIndicator`.
+:::
+
 Обязательность поля задаётся с помощью свойства `required`. 
 Если поле является обязательным, то у компонента появляется специальный индикатор. 
 Изменить расположение индикатора можно с помощью свойства `requiredPlacement`, которое принимает значения `left` и `right`. 
