--- a/packages/plasma-new-hope/src/components/Flow/Flow.template-doc.mdx
+++ b/packages/plasma-new-hope/src/components/Flow/Flow.template-doc.mdx
@@ -41,7 +41,7 @@ export function App() {
 
     return (
         <div>
-            <Flow mainAxisGap="0.5ch" crossAxisGap="1ch" style={{ width: '15ch' }} >
+            <Flow mainAxisGap="0.5ch" crossAxisGap="1ch" style=\{{ width: '15ch' }} >
                 {Array(6)
                     .fill(0)
                     .map((_, i) => (<div key={i} style={style(i)}>{numbers[i]}</div>))}
@@ -77,7 +77,7 @@ export function App() {
                 orientation="vertical"
                 mainAxisGap="0.5ch"
                 crossAxisGap="1ch"
-                style={{ height: '90px' }}
+                style=\{{ height: '90px' }}
             >
                 {Array(6)
                     .fill(0)
