--- a/packages/plasma-new-hope/src/components/Segment/Segment.template-doc.mdx
+++ b/packages/plasma-new-hope/src/components/Segment/Segment.template-doc.mdx
@@ -59,7 +59,7 @@ export function App() {
     }
 
     return (
-        <div style={{ display: "block" }} >
+        <div style=\{{ display: "block" }} >
             <SegmentProvider defaultSelected={['label_1']}>
                 <SegmentTemplate/>
             </SegmentProvider>
@@ -103,7 +103,7 @@ export function App() {
     }
 
     return (
-        <div style={{ display: "block" }} >
+        <div style=\{{ display: "block" }} >
             <SegmentProvider defaultSelected={['label_1']} singleSelectedRequired>
                 <SegmentTemplate/>
             </SegmentProvider>
@@ -145,7 +145,7 @@ export function App() {
     }
 
     return (
-        <div style={{ display: "block" }} >
+        <div style=\{{ display: "block" }} >
             <SegmentProvider defaultSelected={['label_1']}>
                 <SegmentTemplate/>
             </SegmentProvider>
