--- a/packages/plasma-new-hope/src/components/Slider/Slider.template-doc.mdx
+++ b/packages/plasma-new-hope/src/components/Slider/Slider.template-doc.mdx
@@ -77,7 +77,7 @@ export function App() {
 }
 ```
 
-# Вертикальное отображение
+## Вертикальное отображение
 
 ```tsx live
 import React from 'react';
@@ -86,7 +86,7 @@ import { IconMic } from '@salutejs/plasma-icons';
 
 export function App() {
     return (
-        <section style={{ height: '300px' }}>
+        <section style=\{{ height: '300px' }}>
             <Slider
                 onChangeCommitted={() => {}}
                 min={0}
