--- a/packages/plasma-new-hope/src/components/Table/Table.template-doc.mdx
+++ b/packages/plasma-new-hope/src/components/Table/Table.template-doc.mdx
@@ -492,7 +492,7 @@ export type TableColumnData = {
             ];
 
             return (
-                <div style={{ display: "block" }}>
+                <div style=\{{ display: "block" }}>
                     <ButtonGroup size="xs" isCommonButtonStyles={false}>
                         <Button text="Очистить выбранные" view="warning" size="xs" onClick={clearSelected} />
                         <Button text="Убрать сортировку" view="warning" size="xs" onClick={clearSorted} />
@@ -504,7 +504,7 @@ export type TableColumnData = {
                     <br />
                     <br />
 
-                    <div style={{ overflow: "scroll" }}>
+                    <div style=\{{ overflow: "scroll" }}>
                         <Table
                             data={data}
                             columns={columns}
