--- a/packages/plasma-new-hope/src/components/Combobox/Combobox.template-doc.mdx
+++ b/packages/plasma-new-hope/src/components/Combobox/Combobox.template-doc.mdx
@@ -26,7 +26,7 @@ type Items = Array<{
          */
         label: string;
         /**
-        * Сторона открытия вложенного дропдауна относительно текущего элемента
+        * Сторона открытия вложенного dropdown относительно текущего элемента
         * @default right
         */
         placement?: Placement;
@@ -49,7 +49,7 @@ type Items = Array<{
     }>;
 ```
 
-Тип выбора комбобокса - одиночный или множественный зависит от типа `value` и `onChange`. В одиночном value - `string`, в множественном - `Array<string>`.\
+Тип выбора Combobox - одиночный или множественный зависит от типа `value` и `onChange`. В одиночном value - `string`, в множественном - `Array<string>`.\
 
 
 ## Примеры
@@ -85,8 +85,8 @@ type Items = Array<{
             ];
 
             return (
-                <div style={{ display: "flex", gap: "30px", height: "300px" }}>
-                    <div style={{ width: "300px" }}>
+                <div style=\{{ display: "flex", gap: "30px", height: "300px" }}>
+                    <div style=\{{ width: "300px" }}>
                         <Combobox
                             items={items}
                             value={value}
@@ -131,8 +131,8 @@ type Items = Array<{
             ];
 
             return (
-                <div style={{ display: "flex", gap: "30px", height: "300px" }}>
-                    <div style={{ width: "300px" }}>
+                <div style=\{{ display: "flex", gap: "30px", height: "300px" }}>
+                    <div style=\{{ width: "300px" }}>
                         <Combobox
                             multiple
                             items={items}
@@ -180,8 +180,8 @@ type Items = Array<{
             ];
 
             return (
-                <div style={{ display: "flex", gap: "30px", height: "300px" }}>
-                    <div style={{ width: "300px" }}>
+                <div style=\{{ display: "flex", gap: "30px", height: "300px" }}>
+                    <div style=\{{ width: "300px" }}>
                         <Combobox
                             multiple
                             items={items}
@@ -200,9 +200,9 @@ type Items = Array<{
         ```
     </TabItem>
     <TabItem value="portal" label="Portal">
-        Иногда возникает необходимость вынесения выпадающего списка на уровни выше в DOM. К примеру, когда у родительского блока имеется скролл, и список будет обрезаться, чего хотелось бы избежать.\
+        Иногда возникает необходимость вынесения выпадающего списка на уровни выше в DOM. К примеру, когда у родительского блока имеется scroll, и список будет обрезаться, чего хотелось бы избежать.\
         Для такой реализации имеется пропс `portal`, который принимает либо `ref` либо `id` html-тега.\
-        Также нужно прокинуть проп `listWidth`, чтобы явно задать ширину списку. Если этого не сделать, то будет взята ширина 100% от блока, на который ведет ссылка портала.
+        Также нужно прокинуть свойство `listWidth`, чтобы явно задать ширину списку. Если этого не сделать, то будет взята ширина 100% от блока, на который ведет ссылка портала.
 
         ```tsx live
         import React, { useRef } from 'react';
@@ -232,11 +232,11 @@ type Items = Array<{
                 },
             ];
 
-            const ref = useRef(null)
+            const ref = useRef(null);
 
             return (
-                <div style={{ height: "300px" }} ref={ref}>
-                    <div style={{ width: "300px" }}>
+                <div style=\{{ height: "300px" }} ref={ref}>
+                    <div style=\{{ width: "300px" }}>
                         <Combobox
                             items={items}
                             value={value}
@@ -283,8 +283,8 @@ type Items = Array<{
             ];
 
             return (
-                <div style={{ height: "300px" }}>
-                    <div style={{ width: "300px" }}>
+                <div style=\{{ height: "300px" }}>
+                    <div style=\{{ width: "300px" }}>
                         <Combobox
                             items={items}
                             placeholder="Placeholder"
@@ -329,9 +329,9 @@ type Items = Array<{
             ];
 
             return (
-                <div style={{ height: "300px" }}>
-                    <div style={{width: "300px" }}>
-                        <Button text={ alwaysOpened ? 'По умолчанию' : 'Всегда открыт' } onClick={() => setAlwaysOpened(!alwaysOpened)} style={{ marginBottom: '1rem' }} />
+                <div style=\{{ height: "300px" }}>
+                    <div style=\{{width: "300px" }}>
+                        <Button text={ alwaysOpened ? 'По умолчанию' : 'Всегда открыт' } onClick={() => setAlwaysOpened(!alwaysOpened)} style=\{{ marginBottom: '1rem' }} />
                         <Combobox
                             items={items}
                             placeholder="Placeholder"
@@ -344,6 +344,37 @@ type Items = Array<{
             );
         }
         ```
+    </TabItem>
+    <TabItem value="virtual" label="Virtual">
+        :::caution
+            Работает только в одно-уровневых списках.
+        :::
+
+        Свойство `virtual` позволяет виртуализировать выпадающий список. Для настройки высоты списка можно использовать свойство `listMaxHeight`.
+
+       ```tsx live
+        import React from 'react';
+        import { Combobox } from '@salutejs/{{ package }}';
+
+        export function App() {
+            const items = Array(5000).fill(1).map((_, i) => ({ value: i.toString(), label: i.toString() }));
+
+            return (
+                <div style=\{{ height: "300px" }}>
+                    <div style=\{{width: "300px" }}>
+                        <Combobox
+                            items={items}
+                            virtual
+                            listMaxHeight="200px"
+                            placeholder="Placeholder"
+                            label="Label"
+                            helperText="Helper text"
+                        />
+                    </div>
+                </div>
+            );
+        }
+    ```
     </TabItem>
     <TabItem value="infinite" label="Infinite Loading">
         Пример с бесконечной загрузкой элементов в списке.
@@ -388,8 +419,8 @@ type Items = Array<{
             };
 
             return (
-                <div style={{ height: "300px" }}>
-                    <div style={{ width: "300px" }}>
+                <div style=\{{ height: "300px" }}>
+                    <div style=\{{ width: "300px" }}>
                         <Combobox
                             items={items}
                             listMaxHeight="200px"
@@ -411,7 +442,7 @@ type Items = Array<{
 ## Использование с React Hook Form и нативной формой
 
 :::caution Использование атрибута `name`
-Используйте  свойство `name` только когда это необходимо. Оно влияет на выходной тип в `onChange`.
+Используйте свойство `name` только когда это необходимо. Оно влияет на выходной тип в `onChange`.
 :::
 
 <Tabs>
@@ -462,8 +493,8 @@ type Items = Array<{
             ];
 
             return (
-                <div style={{ display: "flex", gap: "30px", height: "300px" }}>
-                    <form onSubmit={handleSubmit(onSubmit)} style={{ display: 'flex', flexDirection: 'column', gap: '10px' }}>
+                <div style=\{{ display: "flex", gap: "30px", height: "300px" }}>
+                    <form onSubmit={handleSubmit(onSubmit)} style=\{{ display: 'flex', flexDirection: 'column', gap: '10px' }}>
                         <Combobox
                             items={items}
                             {...register('combobox')}
@@ -525,8 +556,8 @@ type Items = Array<{
             ];
 
             return (
-                <div style={{ display: "flex", gap: "30px", height: "300px" }}>
-                    <form onSubmit={handleSubmit(onSubmit)} style={{ display: 'flex', flexDirection: 'column', gap: '10px' }}>
+                <div style=\{{ display: "flex", gap: "30px", height: "300px" }}>
+                    <form onSubmit={handleSubmit(onSubmit)} style=\{{ display: 'flex', flexDirection: 'column', gap: '10px' }}>
                         <Controller
                             control={control}
                             name="combobox"
@@ -598,8 +629,8 @@ type Items = Array<{
             ];
 
             return (
-                <div style={{ display: "flex", gap: "30px", height: "300px" }}>
-                    <form onSubmit={onSubmit} style={{ display: 'flex', flexDirection: 'column', gap: '20px' }}>
+                <div style=\{{ display: "flex", gap: "30px", height: "300px" }}>
+                    <form onSubmit={onSubmit} style=\{{ display: 'flex', flexDirection: 'column', gap: '20px' }}>
                         <Combobox label="Combobox" name="combobox" defaultValue={"brazil"} items={items} />
                         <Combobox label="Combobox" name="comboboxMulti" defaultValue={["brazil"]} items={items} multiple />
                         <Button type="submit">Отправить</Button>
