--- a/packages/plasma-new-hope/src/components/TextArea/TextArea.template-doc.mdx
+++ b/packages/plasma-new-hope/src/components/TextArea/TextArea.template-doc.mdx
@@ -161,11 +161,18 @@ export function App() {
 
 
 ### Обязательность поля
-Обязательность поля задаётся с помощью свойств `required` и `requiredPlacement`. Где `requiredPlacement` отвечает за выравнивание и принимает значения `"left"` и `"right"`:
+
+:::tip
+Наличие индикатора регулируется свойством `hasRequiredIndicator`.
+:::
+
+Обязательность поля задаётся с помощью свойств `required` и `requiredPlacement`.
+
+Где `requiredPlacement` отвечает за выравнивание и принимает значения `"left"` и `"right"`:
 
 ```tsx live
 import React from 'react';
-import { TextField } from '@salutejs/{{ package }}';
+import { TextArea } from '@salutejs/{{ package }}';
 
 export function App() {
     return (
