docs(giga): improved docs

--- a/website/plasma-giga-docs/docs/components/NumberFormat.mdx
+++ b/website/plasma-giga-docs/docs/components/NumberFormat.mdx
@@ -10,8 +10,8 @@ import { PropsTable, Description } from '@site/src/components';
 <PropsTable name="NumberFormat" exclude={['css']} />
 
 ## Использование
-Компонент `NumberFormat` представляет собой поле ввода с поле ввода числовых значений.
-Он реализован на компоненте [TextField](https://plasma.sberdevices.ru/giga/components/textfield/) 
+Компонент `NumberFormat` представляет собой поле ввода числовых значений.
+Он реализован на компоненте [TextField](https://plasma.sberdevices.ru//components/textfield/)
 и наследует практически все его свойства (`size`, `view`, `disabled`, `label` и тд.)
 
 ### Разделитель тысяч и десятичных знаков
@@ -146,7 +146,7 @@ export function App() {
 ```
 
 ### Ведущие нули
-Чтобы разрешить в числе ведущие нули, нуджно указать свойство `allowLeadingZeros`:
+Чтобы разрешить в числе ведущие нули, нужно указать свойство `allowLeadingZeros`:
 
 ```tsx live
 import React from 'react';
