--- a/website/plasma-giga-docs/docs/components/Slider.mdx
+++ b/website/plasma-giga-docs/docs/components/Slider.mdx
@@ -77,7 +77,7 @@ export function App() {
 }
 ```
 
-# Вертикальное отображение
+## Вертикальное отображение
 
 ```tsx live
 import React from 'react';
