--- a/website/plasma-giga-docs/docs/components/Toast.mdx
+++ b/website/plasma-giga-docs/docs/components/Toast.mdx
@@ -180,10 +180,9 @@ export function App() {
 ```jsx live
 import React from 'react'
 import { IconBell } from '@salutejs/plasma-icons';
-import { useToast, ToastProvider, Button, ViewContainer } from '@salutejs/plasma-giga'
+import { useToast, ToastProvider, Button } from '@salutejs/plasma-giga'
 
 export function App() {
-
     const Icon = () => <IconBell color="inherit" size="xs" />;
 
     const ToastExample = () => {
