--- a/website/plasma-giga-docs/docs/components/DatePicker.mdx
+++ b/website/plasma-giga-docs/docs/components/DatePicker.mdx
@@ -194,8 +194,13 @@ export function App() {
 ```
 
 ### Обязательность поля
+
+:::tip
+Наличие индикатора регулируется свойством `hasRequiredIndicator`.
+:::
+
 Обязательность поля задаётся с помощью свойства `required`. 
-Если поле является обязательным, то у компонента появляется специальный индикатор. Наличие индикатора регулируется свойством `hasRequiredIndicator`.
+Если поле является обязательным, то у компонента появляется специальный индикатор. 
 Изменить расположение индикатора можно с помощью свойства `requiredPlacement`, которое принимает значения `left` и `right`. 
 
 ```tsx live
