--- a/website/plasma-giga-docs/docs/components/Radiobox.mdx
+++ b/website/plasma-giga-docs/docs/components/Radiobox.mdx
@@ -7,18 +7,18 @@ import { PropsTable, Description } from '@site/src/components';
 
 # Radiobox
 <Description name="Radiobox" />
-<PropsTable name="Radiobox" exclude={['css', 'focused']} />
+<PropsTable name="Radiobox" exclude={['css', 'focused']} include={['defaultChecked']} />
 
 :::caution Устаревшие значения для свойства view
-Актуальным значением для свойства `view` - является `accent`. 
+Актуальным значением для свойства `view` - является `accent`.
 
-Все остальные значения `deprecated` и будут удалены в ближайшее время! 
+Все остальные значения `deprecated` и будут удалены в ближайшее время!
 :::
 
 ## Использование
 Компонент `Radiobox` может содержать лейбл и описание.
 
-По умолчанию, контент внутри лейбла и описания многострочный. 
+По умолчанию, контент внутри лейбла и описания многострочный.
 
 Для того чтобы стал однострочным, необходимо использовать свойство `singleLine`(по умолчанию `false`).
 
@@ -34,14 +34,13 @@ export function App() {
 ```
 
 ## RadioGroup
+
 Компоненты `Radiobox` следует объединять в `RadioGroup`
 
 ```tsx live
-<div>
-    <RadioGroup aria-labelledby="radiogroup-title-id">
-        <H3 id="radiogroup-title-id" style={{"margin-bottom": "12px"}}>Заголовок</H3>
-        <Radiobox name="radio-1" label="Радиокнопка 1" description="Описание 1" defaultChecked />
-        <Radiobox name="radio-1" label="Радиокнопка 2" description="Описание 2" />
-    </RadioGroup>
-</div>
+<RadioGroup aria-labelledby="radiogroup-title-id">
+    <H3 id="radiogroup-title-id">Заголовок</H3>
+    <Radiobox name="radio-1" label="Радиокнопка 1" description="Описание 1" defaultChecked />
+    <Radiobox name="radio-1" label="Радиокнопка 2" description="Описание 2" />
+</RadioGroup>
 ```
