--- a/packages/plasma-new-hope/src/components/Slider/Slider.template-doc.mdx
+++ b/packages/plasma-new-hope/src/components/Slider/Slider.template-doc.mdx
@@ -13,13 +13,23 @@ import { PropsTable, Description } from '@site/src/components';
 ## Использование
 
 ```tsx live
-import React from 'react';
+import React, { useState } from 'react';
 import { Slider  } from '@salutejs/{{ package }}';
 
 export function App() {
+    const [value, setValue] = useState(30);
+
+    const onChangeCommittedHandle = (value) => {
+        setValue(value);
+    };
+
+    const onChangeHandle = (value) => {
+        setValue(value);
+    };
+
     return (
         <section>
-            <Slider onChangeCommitted={() => {}} min={0} max={100} value={30} />
+            <Slider onChange={onChangeHandle} onChangeCommitted={onChangeCommittedHandle} min={0} max={100} value={value} />
         </section>
     );
 }
@@ -80,18 +90,29 @@ export function App() {
 ## Вертикальное отображение
 
 ```tsx live
-import React from 'react';
+import React, { useState } from 'react';
 import { Slider  } from '@salutejs/{{ package }}';
 import { IconMic } from '@salutejs/plasma-icons';
 
 export function App() {
+    const [value, setValue] = useState(30);
+
+    const onChangeCommittedHandle = (value) => {
+        setValue(value);
+    };
+
+    const onChangeHandle = (value) => {
+        setValue(value);
+    };
+
     return (
         <section style=\{{ height: '300px' }}>
             <Slider
-                onChangeCommitted={() => {}}
+                value={value}
+                 onChange={onChangeHandle}
+                onChangeCommitted={onChangeCommittedHandle}
                 min={0}
                 max={100}
-                value={30}
                 label="Громкость"
                 labelContent={<IconMic size="s" />}
                 orientation="vertical"
