docs(core): fix autocomplete template

--- a/packages/plasma-new-hope/src/components/Autocomplete/Autocomplete.template-doc.mdx
+++ b/packages/plasma-new-hope/src/components/Autocomplete/Autocomplete.template-doc.mdx
@@ -504,7 +504,7 @@ type SuggestionItem = {
         import { Select, Cell } from '@salutejs/{{ package }}';
 
         export function App() {
-            const mockData = [
+            const items = [
                 { label: 'Алексей Смирнов' },
                 { label: 'Екатерина Иванова' },
             ];
