feat(*): add info view to progress

--- a/packages/plasma-new-hope/src/components/Progress/Progress.template-doc.mdx
+++ b/packages/plasma-new-hope/src/components/Progress/Progress.template-doc.mdx
@@ -17,6 +17,7 @@ import { PropsTable, Description } from '@site/src/components';
 + `"primary"` – основная;
 + `"secondary"` – вторичная;
 + `"accent"` – акцентная;
++ `"info"` – информирующая;
 + `"success"` – успешное завершение;
 + `"warning"` – предупреждение;
 + `"error"` – ошибка;
