--- a/website/plasma-web-docs/docs/components/Progress.mdx
+++ b/website/plasma-web-docs/docs/components/Progress.mdx
@@ -18,6 +18,7 @@ import { PropsTable, Description, StorybookLink } from '@site/src/components';
 + `"primary"` – основная;
 + `"secondary"` – вторичная;
 + `"accent"` – акцентная;
++ `"info"` – информирующая;
 + `"success"` – успешное завершение;
 + `"warning"` – предупреждение;
 + `"error"` – ошибка;
