--- a/website/sdds-dfa-docs/docs/components/Progress.mdx
+++ b/website/sdds-dfa-docs/docs/components/Progress.mdx
@@ -17,6 +17,7 @@ import { PropsTable, Description } from '@site/src/components';
 + `"primary"` – основная;
 + `"secondary"` – вторичная;
 + `"accent"` – акцентная;
++ `"info"` – информирующая;
 + `"success"` – успешное завершение;
 + `"warning"` – предупреждение;
 + `"error"` – ошибка;
